--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div id="app" class="w-full max-w-2xl p-8 bg-white rounded-xl shadow-2xl text-center">
         <div id="FormCalculadora">
             <form id="calcForm" class="Calculadora">
-                <a href="https://panzera5.wixsite.com/citec"><img src="../assets/Logo CITeC.png" alt="Logo CITeC"id="logo"></a>
+                <a href="https://panzera5.wixsite.com/citec"><img src="assets/Logo CITeC.png" alt="Logo CITeC"id="logo"></a>
                 <h1 id="title" class="text-4xl text-gray-800 mb-8">CALCULADORA DE ESPUMAS</h1>
                 <div id="dropdown" class="mb-6">
                     <label for="tipoEspuma" class="block text-left text-lg font-semibold text-gray-700 mb-2">1. Escolha o tipo de espuma:</label>
@@ -46,3 +46,4 @@
 </body>
 
 </html>
+
